[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "ubu"
version = "0.0.1"
description = "Ubu application framework."
readme = "README.md"
keywords = [ "python" ]
authors = [ { name = "bzczb", email = "uqzx@protonmail.com" } ]
requires-python = ">=3.12,<4.0"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "injector",
]

urls.Documentation = "https://bzczb.github.io/ubu/"
urls.Homepage = "https://bzczb.github.io/ubu/"
urls.Repository = "https://github.com/bzczb/ubu"

[dependency-groups]
dev = [
  "autoflake>=2.3.1",
  "deptry>=0.23",
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.5.10",
  "mkdocstrings[python]>=0.26.1",
  "pip-review>=1.3",
  "pip-tools>=7.5",
  "pre-commit>=2.20",
  "pyproject-fmt>=2.6",
  "pytest>=7.2",
  "pytest-cov>=4",
  "ruff>=0.11.5",
  "tox-uv>=1.11.3",
  "ty>=0.0.1a16",
]

[tool.hatch.build.targets.wheel]
packages = [ "ubu" ]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

format.preview = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pygrep-hooks
  "PGH",
  # ruff
  "RUF",
  # flake8-bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  "W",
  # flake8-2020
  "YTT",
]
lint.ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]
lint.per-file-ignores."tests/*" = [ "S101" ]

[tool.deptry]
ignore = [ "DEP002" ] # Ignore unused dependencies during early development.

[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = [ "ubu" ]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"

[tool.uv.sources]
injector = { url = "https://github.com/bzczb/injector/archive/3f371fe5d291d4694fa5e5719a6fd5f9682b8d0a.tar.gz" }
